[package]
name = "rcli"
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81" # 错误处理
clap = { version = "4.5.4", features = ["derive"] }
enum_dispatch = "0.3.13"
humantime = "2.1.0"
jsonwebtoken = {version = "9.3.0", features = ["use_pem"]}
tokio = { version = "1", features = ["full"] } # 异步处理库
